# cryptora_password_manager

./: .gitignore  CONTRIBUTING.md  DOCUMENTATION.md  LICENSE  NOTICE  Pipfile  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt
application/dto/: credential_dto.py  vault_dto.py
application/exceptions/: credential_not_found_error.py  invalid_master_password_error.py  vault_locked_error.py
application/services/: add_credential.py  create_vault.py  get_credential.py  list_credentials.py  lock_vault.py  remove_credential.py  unlock_vault.py  update_credential.py
domain/entities/: user.py  vault.py  vault_item.py
domain/repositories/: user_repository.py  vault_repository.py
domain/services/: data_encryption_key_deriver.py  master_password_hasher.py  master_password_verifier.py  password_strength_calculator.py  vault_item_encryption_service.py  vault_locking_service.py
domain/value_objects/: created_at.py  domain_name.py  encrypted_value.py  master_password.py  password_hash.py  password_strength.py  service_name.py  updated_at.py  userid.py  username.py  vault_item_username.py
infrastructure/config/: settings.py
infrastructure/crypto/: argon2_key_derivation.py  cryptography_encryption.py  secure_random.py
infrastructure/persistence/: file_vault_repository.py  postgresql_vault_repository.py
infrastructure/security/: audit_logger.py  integrity_checker.py  password_hasher.py
interfaces/cli/: menu.py  vault_cli.py
interfaces/desktop/: app.py
tests/e2e/: full_test.py
tests/integration/application/: test_application_full_flow.py
tests/integration/domain/: test_full_domain_workflow.py
tests/integration/domain/services/: test_master_password_hashing.py
tests/integration/infrastructure/: test_infrastructure_domain_flow.py
tests/unit/application/services/: test_create_vault_service.py  test_credential_services.py  test_vault_locking_services.py
(+32 files in other folders)
