[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptora"
version = "0.1.0"
description = "A secure, password manager built in Python."
authors = [
    { name="Arman", email="contact@particelagency.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "cryptography>=42.0.5",
    "argon2-cffi>=23.1.0",
    "pydantic>=2.7.0",
    "rich>=13.7.0",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "black>=24.3.0",
    "isort>=5.13.0",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]