[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptora"
version = "0.1.0"
description = "A secure, password manager built in Python."
authors = [
    { name="Arman", email="contact@particelagency.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "cryptography>=42,<47",
    "argon2-cffi>=23,<26",
    "pydantic>=2.7.0",
    "rich>=13.7.0",
    "click>=8.1.7",
]

license = {text = "Apache-2.0"}

keywords = ["password-manager", "security", "cryptography", "clean-architecture"]

classifiers = [
 "Programming Language :: Python :: 3",
 "Programming Language :: Python :: 3.10",
 "License :: OSI Approved :: Apache Software License",
 "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "black>=24.3.0",
    "isort>=5.13.0",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]